2009-10-05  Dave Hyatt  <hyatt@apple.com>

        Update layout tests to account for the new beforeload event object.

        * fast/dom/Window/window-properties-expected.txt:
        * fast/dom/prototype-inheritance-expected.txt:
        * fast/js/global-constructors-expected.txt:

2009-10-05  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Rubberstamped by Simon Hausmann.

        Remove test that I forgot in earlier commit.

        * platform/qt/Skipped:

2009-10-05  Eric Seidel  <eric@webkit.org>

        No review, rolling out r49104.
        http://trac.webkit.org/changeset/49104

        * fast/forms/ValidityState-rangeOverflow-number-expected.txt: Removed.
        * fast/forms/ValidityState-rangeOverflow-number.html: Removed.
        * fast/forms/ValidityState-rangeOverflow-range-expected.txt: Removed.
        * fast/forms/ValidityState-rangeOverflow-range.html: Removed.
        * fast/forms/ValidityState-rangeUnderflow-number-expected.txt: Removed.
        * fast/forms/ValidityState-rangeUnderflow-number.html: Removed.
        * fast/forms/ValidityState-rangeUnderflow-range-expected.txt: Removed.
        * fast/forms/ValidityState-rangeUnderflow-range.html: Removed.
        * fast/forms/input-minmax-expected.txt: Removed.
        * fast/forms/input-minmax.html: Removed.
        * fast/forms/script-tests/ValidityState-rangeOverflow-number.js: Removed.
        * fast/forms/script-tests/ValidityState-rangeOverflow-range.js: Removed.
        * fast/forms/script-tests/ValidityState-rangeUnderflow-number.js: Removed.
        * fast/forms/script-tests/ValidityState-rangeUnderflow-range.js: Removed.
        * fast/forms/script-tests/input-minmax.js: Removed.

2009-10-05  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        Tests to check if validation-related CSS selectors are applied immediately.
        https://bugs.webkit.org/show_bug.cgi?id=28868

        * fast/forms/input-live-pseudo-selectors-expected.txt: Added.